name:                 cloudflare-challenge-http-client
version:              0.1.0.0
author:               Nick Spinale
maintainer:           Nick Spinale <nick@nickspinale.com>
license:              MIT
license-file:         LICENSE
build-type:           Simple
cabal-version:        >=1.10

executable fetch-through-cloudflare
  default-language:   Haskell2010
  hs-source-dirs:     examples
  main-is:            FetchThroughCloudflare.hs
  ghc-options:        -threaded

  build-depends:      base >=4.8 && <5
                    , cloudflare-challenge
                    , conduit
                    , http-client
                    , http-client-lens
                    , http-client-tls
                    , http-conduit
                    , http-types
                    , lens
