name:                 cloudflare-challenge-http-client
version:              0.1.0.0
author:               Nick Spinale
maintainer:           Nick Spinale <nick@nickspinale.com>
license:              MIT
license-file:         LICENSE
build-type:           Simple
cabal-version:        >=1.10

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall -fwarn-tabs -fno-warn-unused-do-bind -fno-warn-name-shadowing  -fno-warn-missing-fields

  exposed-modules:    Network.HTTP.Client.Cloudflare.Challenge

  build-depends:      base >=4.8 && <5
                    , cloudflare-challenge
                    , bytestring
                    , conduit
                    , conduit-extra
                    , exceptions
                    , html-conduit
                    , http-client
                    , http-client-lens
                    , http-conduit
                    , http-types
                    , lens
                    , mtl
                    , resourcet
                    , text

executable fetch-through-cloudflare
  default-language:   Haskell2010
  hs-source-dirs:     examples
  main-is:            FetchThroughCloudflare.hs
  ghc-options:        -threaded -Wall -fwarn-tabs -fno-warn-missing-signatures

  build-depends:      base >=4.8 && <5
                    , cloudflare-challenge-http-client
                    , conduit
                    , http-client
                    , http-client-lens
                    , http-client-tls
                    , http-conduit
                    , http-types
                    , lens
