name:                 cloudflare-challenge
version:              0.1.0.0
author:               Nick Spinale
maintainer:           Nick Spinale <nick@nickspinale.com>
license:              MIT
license-file:         LICENSE
build-type:           Simple
cabal-version:        >=1.10

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall -fwarn-tabs -fno-warn-unused-do-bind

  exposed-modules:    Network.HTTP.Cloudflare.Challenge

  build-depends:      base >=4.8 && <5
                    , attoparsec
                    , bytestring
                    , conduit
                    , conduit-extra
                    , http-types
                    , lens
                    , mtl
                    , resourcet
                    , text
                    , typed-process
                    , xml-conduit
                    , xml-lens

test-suite tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     tests
  main-is:            Tests.hs
  ghc-options:        -threaded

  build-depends:      base >=4.8 && <5
                    , cloudflare-challenge
                    , html-conduit
                    , http-types
                    , text
